@@ -1,11 +1,8 @@
-GAMEBOARDSTART 5,7
+GAMEBOARDSTART 5,5
 .....
 .###.
 .....
 .....
 .....
-#####
-.....
 GAMEBOARDEND
 POS 1 3,3 S
-POS 2 5,7 N
