@@ -1,0 +1,20 @@
+GAMEBOARDSTART 21,17
+....###....######....
+...........######....
+....###....######....
+....###..............
+##.##########.#####.#
+##.###..........#....
+....##..........#....
+.....................
+....##..........#....
+....##..........####.
+###..#..........####.
+####.#..........#....
+###..######.#####.###
+....####....#####....
+....####.............
+............#####....
+....####....#####....
+GAMEBOARDEND
+POS 1 10,15 N
